# temp

./: .gitignore  Makefile  README.md  agent-loop-architecture.md  chat-loop-refactor-plan.md  docker-compose.yml  pyproject.toml
server/backend/: .env.example  INSTRUCTIONS.md  mcp_servers.example.yaml  pyproject.toml
server/backend/app/: config.py  dependencies.py  main.py
server/backend/app/agent/: QueryEngine.py  Tool.py  context.py  query_loop.py  router.py  tools_registry.py
server/backend/app/agent/commands/: __init__.py  _registry.py  filters.py  loader.py
server/backend/app/agent/commands/clear/: __init__.py  clear.py
server/backend/app/agent/commands/compact/: __init__.py  compact.py
server/backend/app/agent/commands/context/: __init__.py  context.py
server/backend/app/agent/commands/cost/: __init__.py  cost.py
server/backend/app/agent/commands/export/: __init__.py  export.py
server/backend/app/agent/commands/help/: __init__.py  help.py
server/backend/app/agent/commands/memory/: __init__.py  memory.py
server/backend/app/agent/commands/new_deck/: __init__.py  new_deck.py
server/backend/app/agent/commands/plan/: __init__.py  plan.py
server/backend/app/agent/commands/remember/: __init__.py  remember.py
server/backend/app/agent/commands/skills/: __init__.py  skills.py
server/backend/app/agent/commands/theme/: __init__.py  theme.py
server/backend/app/agent/constants/: __init__.py  xml.py
server/backend/app/agent/prompts/: __init__.py  api.py  builder.py  cyber_risk_instruction.py  sections.py  slide_generator.md
server/backend/app/agent/query/: deps.py  transitions.py
server/backend/app/agent/routes/: __init__.py  _shared.py  conversations.py  export_deck.py  masters.py  memories.py  meta.py  turn.py
server/backend/app/agent/routes/masters/: __init__.py  (+2 more)
server/backend/app/agent/services/: title_generator.py  token_estimation.py
server/backend/app/agent/skills/: __init__.py  bundled_skills.py  discovery.py  frontmatter_skill.py  inventory.py  load_skills_dir.py  token_estimate.py
server/backend/app/agent/state/: store.py
server/backend/app/agent/types/: command.py  hooks.py  ids.py  message.py  permissions.py  tools.py
server/backend/app/agent/utils/: command_lifecycle.py  compact_boundary_marker.py  context_collapse.py  create_command_input_message.py  messages.py  model.py  slash_command_parsing.py  tool_result_storage.py
server/backend/app/bridges/: __init__.py  app_settings_client.py  db_client.py  langfuse_bridge.py  litellm_bridge.py  logging_bridge.py  provider_bridge.py
server/backend/app/db/: __init__.py  _shared.py  _shared_proxy.py  admin.py  auth.py  conversations.py  masters.py  memories.py  messages.py  projects.py  router.py  slides.py  usage.py
server/backend/app/middleware/: __init__.py  exception_handler.py  rate_limit.py  request_context.py
server/backend/app/services/: pptx_renderer.py
server/backend/tests/: ci.env  conftest.py  test_agent_masters_upload.py  test_db_client_masters.py  test_font_meta.py  test_master_extractor.py  test_pptx_renderer.py  test_smoke.py
server/backend/tests/__snapshots__/: test_master_extractor.ambr
server/backend/tests/fixtures/: .gitignore  synthetic.py
server/db-service/: alembic.ini  pyproject.toml
server/db-service/alembic/: env.py
server/db-service/alembic/versions/: 0001_initial_schema.py  0004_project_members.py  0005_conversation_token_counters.py  0006_conversation_cost.py  0007_app_settings.py  0008_memories.py  0009_memory_model_setting.py  0010_masters_and_active_pointer.py  0011_master_layouts.py  0012_master_fonts_assets.py  0013_slide_html_not_empty.py  0014_slide_position_unique.py
server/db-service/app/: config.py  dependencies.py  main.py
server/db-service/app/db/: __init__.py  azure_auth.py  config.py  migrate.py  pool.py  redis.py
server/db-service/app/db/app_settings/: __init__.py  queries.py  repository.py
server/db-service/app/db/conversations/: models.py  queries.py  repository.py
server/db-service/app/db/master_layouts/: models.py  queries.py  repository.py
server/db-service/app/db/masters/: models.py  queries.py  repository.py
server/db-service/app/db/memories/: models.py  queries.py  repository.py
server/db-service/app/db/messages/: models.py  queries.py  repository.py
server/db-service/app/db/project_members/: models.py  queries.py  repository.py
server/db-service/app/db/projects/: access.py  models.py  queries.py  repository.py
server/db-service/app/db/slides/: models.py  queries.py  repository.py
server/db-service/app/db/usage_records/: models.py  queries.py  repository.py
server/db-service/app/db/users/: models.py  queries.py  repository.py
server/db-service/app/middleware/: __init__.py  rate_limit.py
server/db-service/app/routers/: admin.py  auth.py  conversations.py  masters.py  memories.py  messages.py  projects.py  settings.py  slides.py  usage.py  users.py
server/db-service/app/storage/: __init__.py  blob.py
server/db-service/tests/: conftest.py  test_master_layouts_repository.py  test_masters_repository.py  test_masters_router.py  test_migration_0010.py  test_migration_0011.py  test_migration_0012.py  test_smoke.py  test_storage_blob.py
server/libs/app_logger/: pyproject.toml
server/libs/app_logger/src/app_logger/: __init__.py  config.py  formatter.py  setup.py
server/libs/databases/: pyproject.toml
server/libs/databases/src/postgresql/: __init__.py  config.py  pool.py
server/libs/langfuse_client/: pyproject.toml
server/libs/langfuse_client/src/langfuse_client/: __init__.py  client.py  tracing.py
server/libs/llm_provider/: pyproject.toml
server/libs/llm_provider/src/llm_provider/: __init__.py  adapter.py  exceptions.py  mappers.py  schemas.py
server/libs/pptx_master/: README.md  pyproject.toml
server/libs/pptx_master/src/pptx_master/: __init__.py  master_extractor.py  scene.py  schemas.py
server/libs/pptx_master/tests/: test_classifier.py  test_repair_content_types.py  test_smoke.py
server/pptx-renderer/: Dockerfile  pyproject.toml
server/pptx-renderer/app/: main.py
(+261 files in other folders)
