[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tempslide"
version = "0.1.0"
description = "Temp Slide / Edwin — uv workspace root (local development)"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "edwin-backend",
    "edwin-db-service",
    "pptx-renderer",
    "postgresql",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "syrupy>=4.7",
    "httpx>=0.27",
    "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tempslide"]

[tool.uv]
default-groups = []

[tool.uv.workspace]
members = [
    "server/backend",
    "server/db-service",
    "server/pptx-renderer",
    "server/libs/langfuse_client",
    "server/libs/app_logger",
    "server/libs/llm_provider",
    "server/libs/databases",
    "server/libs/pptx_master",
]

[tool.uv.sources]
edwin-backend = { workspace = true }
edwin-db-service = { workspace = true }
pptx-renderer = { workspace = true }
postgresql = { workspace = true }
langfuse-client = { workspace = true }
llm-provider = { workspace = true }
app-logger = { workspace = true }
pptx-master = { workspace = true }

[tool.ruff]
target-version = "py311"
src = ["server", "tempslide"]
line-length = 100
extend-exclude = [
    ".venv",
    "**/__pycache__",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
