[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edwin-backend"
version = "0.1.0"
description = "Edwin AI Presentation Generator – backend"
requires-python = ">=3.11"
dependencies = [
    "certifi",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "langfuse>=4.1.0",
    "langfuse-client",
    "llm-provider",
    "app-logger[azure]",
    "httpx>=0.27",
    "PyJWT[crypto]>=2.8",
    "mcp>=1.2",
    "pyyaml>=6.0",
    "slowapi>=0.1.9",
    "limits>=4.6",
    "bs4"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
