[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edwin-backend"
version = "0.1.0"
description = "Edwin AI Presentation Generator – backend"
requires-python = ">=3.11,<3.12"
dependencies = [
    "certifi>=2024.8.30",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "langfuse>=4.1.0",
    "langfuse-client>=0.1.0",
    "llm-provider>=0.1.0",
    "app-logger[azure]>=0.1.0",
    "pptx-master>=0.1.0",
    "httpx>=0.27",
    "PyJWT[crypto]>=2.8",
    "mcp>=1.2",
    "pyyaml>=6.0",
    "slowapi>=0.1.9",
    "limits>=4.6",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "syrupy>=4.7",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:litellm.*",
    "ignore::DeprecationWarning:pydantic.*",
]
