[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edwin-db-service"
version = "0.1.0"
description = "Edwin DB microservice — users, usage tracking, auth"
requires-python = ">=3.11,<3.12"
dependencies = [
    "azure-identity>=1.19.0",
    "azure-storage-blob>=12.22.0",
    "certifi>=2024.8.30",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "PyJWT[crypto]>=2.8",
    "redis>=5.0",
    "slowapi>=0.1.9",
    "limits>=4.6",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "syrupy>=4.7",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Session-scoped event loop is required because the ``pool`` fixture
# is session-scoped (Entra-auth + asyncpg connect is ~500ms; per-test
# pools dominate runtime). With the default function-scoped loop,
# the pool's connections live on a closed loop by the time the next
# test runs and asyncpg raises "another operation is in progress".
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
