[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pptx-renderer"
version = "0.1.0"
description = "PPTX → PNG sidecar via LibreOffice headless"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
