[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "postgresql"
version = "0.1.0"
description = "PostgreSQL connection pool and configuration"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/postgresql"]
