[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langfuse-client"
version = "0.1.0"
description = "Langfuse initialisation and tracing helpers"
requires-python = ">=3.11,<3.12"
dependencies = [
    "langfuse>=4.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/langfuse_client"]
