[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pptx-master"
version = "0.1.0"
description = "Parse PowerPoint masters into structured slide-IR manifests (template = master + theme)"
requires-python = ">=3.11,<3.12"
dependencies = [
    "python-pptx>=1.0",
    "lxml>=5.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pptx_master"]

[tool.pytest.ini_options]
testpaths = ["tests"]
